--- a/Futura/Futura/Views/Shared/_Layout.cshtml
+++ b/Futura/Futura/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Enwickler", "Index" , "Entwickler")</li>
+                    <li>@Html.ActionLink("Kunden", "Index", "Kunden")</li>
                     <li>@Html.ActionLink("Startseite", "Index", "Home")</li>
                     <li>@Html.ActionLink("Info", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
