--- a/Futura/Futura/Views/Produkt/Details.cshtml
+++ b/Futura/Futura/Views/Produkt/Details.cshtml
@@ -18,6 +18,14 @@
             @Html.DisplayFor(model => model.Produkttitel)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SprachID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SprachID)
+        </dd>
+
     </dl>
 </div>
 <p>
