--- a/Futura/Futura/Views/Produkt/Delete.cshtml
+++ b/Futura/Futura/Views/Produkt/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.Produkttitel)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SprachID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SprachID)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
