--- a/Futura/Futura/Views/Produkt/Index.cshtml
+++ b/Futura/Futura/Views/Produkt/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Produkttitel)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SprachID)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +24,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Produkttitel)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SprachID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ProduktID }) |
