Basic Functionality implemented
Its now Possible to create edit and delete all tables from the database.
I also replaced some of the default layout to acess all tables in theyr
view via links ins the tab menue on top.

--- a/Futura/Futura/Views/Kunde/Create.cshtml
+++ b/Futura/Futura/Views/Kunde/Create.cshtml
@@ -17,10 +17,10 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Kundenname, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.KundenName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Kundenname)
-                @Html.ValidationMessageFor(model => model.Kundenname)
+                @Html.EditorFor(model => model.KundenName)
+                @Html.ValidationMessageFor(model => model.KundenName)
             </div>
         </div>
 
