--- a/Futura/Futura/Views/Kunde/Details.cshtml
+++ b/Futura/Futura/Views/Kunde/Details.cshtml
@@ -11,11 +11,11 @@
 	<hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Kundenname)
+            @Html.DisplayNameFor(model => model.KundenName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Kundenname)
+            @Html.DisplayFor(model => model.KundenName)
         </dd>
 
     </dl>
