--- a/Futura/Futura/Views/Produkt/Details.cshtml
+++ b/Futura/Futura/Views/Produkt/Details.cshtml
@@ -11,19 +11,19 @@
 	<hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Sprache.Sprachtitel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sprache.Sprachtitel)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Produkttitel)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Produkttitel)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SprachID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SprachID)
         </dd>
 
     </dl>
