--- a/Futura/Futura/Views/SkillPool/Edit.cshtml
+++ b/Futura/Futura/Views/SkillPool/Edit.cshtml
@@ -1,26 +1,27 @@
-﻿@model Futura.Models.Produkt
+﻿@model Futura.Models.SkillPool
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Produkt</h4>
+        <h4>SkillPool</h4>
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.SkillPoolID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Produkttitel, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.EntwicklerID, "EntwicklerID", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Produkttitel)
-                @Html.ValidationMessageFor(model => model.Produkttitel)
+                @Html.DropDownList("EntwicklerID", String.Empty)
+                @Html.ValidationMessageFor(model => model.EntwicklerID)
             </div>
         </div>
 
@@ -34,7 +35,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
