--- a/Futura/Futura/Views/Kunde/Delete.cshtml
+++ b/Futura/Futura/Views/Kunde/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Futura.Models.Produkt
+﻿@model Futura.Models.Kunde
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Produkt</h4>
+    <h4>Kunde</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Sprache.Sprachtitel)
+            @Html.DisplayNameFor(model => model.KundenName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Sprache.Sprachtitel)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Produkttitel)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Produkttitel)
+            @Html.DisplayFor(model => model.KundenName)
         </dd>
 
     </dl>
