--- a/Futura/Futura/Views/Produkt/Edit.cshtml
+++ b/Futura/Futura/Views/Produkt/Edit.cshtml
@@ -26,9 +26,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SprachID, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SprachID, "SprachID", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SprachID)
+                @Html.DropDownList("SprachID", String.Empty)
                 @Html.ValidationMessageFor(model => model.SprachID)
             </div>
         </div>
