--- a/Futura/Futura/Views/SkillPool/Delete.cshtml
+++ b/Futura/Futura/Views/SkillPool/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Futura.Models.Produkt
+﻿@model Futura.Models.SkillPool
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Produkt</h4>
+    <h4>SkillPool</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Sprache.Sprachtitel)
+            @Html.DisplayNameFor(model => model.Entwickler.Enwicklername)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Sprache.Sprachtitel)
+            @Html.DisplayFor(model => model.Entwickler.Enwicklername)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Produkttitel)
+            @Html.DisplayNameFor(model => model.Sprachen.Sprachtitel)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Produkttitel)
+            @Html.DisplayFor(model => model.Sprachen.Sprachtitel)
         </dd>
 
     </dl>
