--- a/Futura/Futura/Views/Sprache/Delete.cshtml
+++ b/Futura/Futura/Views/Sprache/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Futura.Models.Kunde
+﻿@model Futura.Models.Sprache
 
 @{
     ViewBag.Title = "Delete";
@@ -8,15 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Kunde</h4>
+    <h4>Sprache</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Kundenname)
+            @Html.DisplayNameFor(model => model.Sprachtitel)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Kundenname)
+            @Html.DisplayFor(model => model.Sprachtitel)
         </dd>
 
     </dl>
