--- a/Futura/Futura/Views/Projekt/Create.cshtml
+++ b/Futura/Futura/Views/Projekt/Create.cshtml
@@ -67,7 +67,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Projektbeschreibung, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Projektbeschreibung)
+                @Html.TextAreaFor(model => model.Projektbeschreibung)
                 @Html.ValidationMessageFor(model => model.Projektbeschreibung)
             </div>
         </div>
