--- a/Futura/Futura/Views/Entwickler/Index.cshtml
+++ b/Futura/Futura/Views/Entwickler/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Enwicklername)
+            @Html.ActionLink("Entwicklername", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th></th>
     </tr>
