--- a/Futura/Futura/Views/Kunde/Index.cshtml
+++ b/Futura/Futura/Views/Kunde/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.KundenName)
+            @Html.ActionLink("Kundenname", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th></th>
     </tr>
