--- a/Futura/Futura/Views/SkillPool/Index.cshtml
+++ b/Futura/Futura/Views/SkillPool/Index.cshtml
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Entwickler.Enwicklername)
+            @Html.ActionLink("Entwicklername", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Sprachen.Sprachtitel)
+            @Html.ActionLink("Produkt", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th></th>
     </tr>
