Revert "Finishing touches"
This reverts commit bb57aece825357f875f1c85b41d1660a7069373b.

--- a/Futura/Futura/Views/Home/Index.cshtml
+++ b/Futura/Futura/Views/Home/Index.cshtml
@@ -21,9 +21,11 @@
     <div class="col-md-4">
         <h2>Projekte anlegen</h2>
         <p>Wenn sie registriert und eingeloggt sind können sie ganz einfach Projekte anlegen idem sie auf den Projekt Reiter oben in der Leiste folgen. Danach müssen nur die Passenden daten angegeben werden und ihr Projekt ist erstellt</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Datenbank Pflegen</h2>
         <p>Je nach Rechtevergabe ihres Users sind sie in der Lage die Datenbank direkt über Futura zu Pflegen. Sie können neue Produkte oder einen Neuen Mitarbeiter im system erfassen welche dann wiederum für neue oder Aktuelle Projekte zur Verfügung stehen</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
